--- a/compose.yml
+++ b/compose.yml
@@ -50,7 +50,7 @@ networks:
   default:
     name: fullstack-app-network
 
-# To run this without using docker you have to do:
+# To run this without using docker compose you have to do:
 # 1. build each image frontend/backend with environment variables parsed
 # 2. create volume if needed for database
 # 3. create network
